Add option to search with or without containment

--- a/nextflow.config
+++ b/nextflow.config
@@ -62,6 +62,7 @@ params {
   sourmash_log2_sketch_size = false
   sourmash_scaled = false
   sourmash_searcher = 'gather'
+  sourmash_search_flags = false
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
