Add method option to differential expression

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,7 @@ params {
   input_is_protein = false
 
   // Differential hash expression options
+  diff_hash_method = 'logreg'
   diff_hash_expression = false
   diff_hash_with_abundance = false  // Small numbers for fewer features
   diff_hash_inverse_regularization_strength = 0.1  // Small numbers for fewer features
