--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - bioconda::diamond=0.9.35
   - bioconda::fastp=0.20.0
   - bioconda::bedtools=2.29.2
+  - bioconda::scanpy=1.5.1
   - pip=20.0.2
   - conda-forge::scikit-learn=0.22.1
   - bioconda::sourmash=3.5.0
