--- a/environment.yml
+++ b/environment.yml
@@ -22,7 +22,7 @@ dependencies:
   - infernal=1.1.2
   - jupyter=1.0.0
   - conda-forge::leidenalg=0.7.0
-  - numba=0.51.0rc1
+  - numba=0.50.1
   - bioconda::multiqc=1.8
   - bioconda::p7zip=15.09
   - conda-forge::pandas=1.0.5
