--- a/environment.yml
+++ b/environment.yml
@@ -13,22 +13,22 @@ dependencies:
   # TODO nf-core: Add required software dependencies here
   - bioconda::anndata=0.6.22.post1
   - bioconda::bedtools=2.29.2
-  - bioawk=1.0
-  - csvtk=0.20.0
+  - bioconda::bioawk=1.0
+  - bioconda::csvtk=0.20.0
   - bioconda::diamond=0.9.35
   - bioconda::fastp=0.20.0
   - conda-forge::fastparquet=0.4.1
   - bioconda::fastqc=0.11.8
-  - infernal=1.1.2
-  - jupyter=1.0.0
+  - bioconda::infernal=1.1.2
+  - conda-forge::jupyter=1.0.0
   - conda-forge::leidenalg=0.7.0
-  - numba=0.50.1
+  - conda-forge::numba=0.50.1
   - bioconda::multiqc=1.8
   - bioconda::p7zip=15.09
   - conda-forge::pandas=1.0.5
   - thombashi::pathvalidate=2.2.0
-  - pip=20.0.2
-  - pytables=3.6.1
+  - conda-forge::pip=20.0.2
+  - conda-forge::pytables=3.6.1
   - conda-forge::python-igraph=0.7.1
   - conda-forge::ripgrep=12.0.1
   - conda-forge::rsync=3.1.3
@@ -37,9 +37,9 @@ dependencies:
   - bioconda::sambamba=0.7.1
   - bioconda::scanpy=1.5.1
   - conda-forge::scikit-learn=0.22.1
-  - seaborn=0.10.1
+  - conda-forge::seaborn=0.10.1
   - bioconda::sourmash=3.5.0
-  - subread=1.6.4
+  - bioconda::subread=1.6.4
   - conda-forge::tqdm=4.45.0
   - pip:
     - git+https://github.com/czbiohub/sencha.git@master#egg=sencha
