--- a/environment.yml
+++ b/environment.yml
@@ -27,7 +27,7 @@ dependencies:
   - bioconda::p7zip=15.09
   - conda-forge::pandas=1.0.5
   - thombashi::pathvalidate=2.2.0
-  - conda-forge::pip=20.0.2
+  - pip=20.0.2
   - conda-forge::pytables=3.6.1
   - conda-forge::python-igraph=0.7.1
   - conda-forge::ripgrep=12.0.1
