Tests seemingly all pass locally..

--- a/nextflow.config
+++ b/nextflow.config
@@ -68,7 +68,7 @@ params {
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archaea", "plasmid", "protozoa", "viral"
-  refseq_release = 'vertebrate_mammalian'
+  refseq_release = false
   taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
