--- a/nextflow.config
+++ b/nextflow.config
@@ -152,9 +152,9 @@ profiles {
   test_bam { includeConfig 'conf/test_bam.config' }
   test_fastq { includeConfig 'conf/test_fastq.config' }
   test_fastq_paired { includeConfig 'conf/test_fastq_paired.config' }
-  test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_diff_hash_abundance { includeConfig 'conf/test_diff_hash_abundance.config' }
-  test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
+  test_diff_hash_gather { includeConfig 'conf/test_diff_hash_gather.config' }
+  test_diff_hash_search { includeConfig 'conf/test_diff_hash_search.config' }
   test_diff_hash_is_aligned { includeConfig 'conf/test_diff_hash_is_aligned.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
