--- a/conf/test_diff_hash_count_hashes_gtf_bam.config
+++ b/conf/test_diff_hash_count_hashes_gtf_bam.config
@@ -32,7 +32,7 @@ params {
   // sourmash_log2_sketch_size = 4
 
   // Filter bam hashes options
-  filter_bam_hashes = true
+  featurecounts_hashes = true
 
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/featurecounts/proteome_to_search.fasta'
   // proteome_search_fasta = '/home/olga/data_lg/czbiohub-reference/ncbi/refseq/releases/refseq-release98-2020-02-06/vertebrate_mammalian/vertebrate_mammalian_concatenated__np_only.faa.gz'
