Get hash2kmer test to pass

--- a/conf/test_diff_hash_count_hashes_gtf_bam.config
+++ b/conf/test_diff_hash_count_hashes_gtf_bam.config
@@ -29,6 +29,7 @@ params {
   protein_searcher = 'sourmash'
   sourmash_molecule = 'protein'
   sourmash_ksize = 27
+  sourmash_scaled = 5
   // sourmash_log2_sketch_size = 4
 
   // Filter bam hashes options
