Add --skip_sourmash, --skip_diamond

--- a/nextflow.config
+++ b/nextflow.config
@@ -67,6 +67,7 @@ params {
   refseq_release = false
 
   // Sourmash options
+  skip_sourmash = false
   sourmash_index = false  // pre-built sequence bloom tree index
   hashes = false
   sourmash_ksize = false
@@ -77,6 +78,7 @@ params {
   sourmash_search_flags = false
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
+  skip_diamond = false
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archaea", "plasmid", "protozoa", "viral"
