--- a/conf/base.config
+++ b/conf/base.config
@@ -29,6 +29,9 @@ process {
   withLabel:cpus_2 {
      cpus = { check_max( 2 * task.attempt, 'cpus' ) }
   }
+  withLabel:cpus_4 {
+     cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+  }
   withLabel:process_low {
     cpus = { check_max( 1 * task.attempt, 'cpus' ) }
     memory = { check_max( 14.GB * task.attempt, 'memory' ) }
@@ -50,7 +53,6 @@ process {
     time = { check_max( 16.h * task.attempt, 'time' ) }
   }
   withLabel:process_long {
-    memory = { check_max( 14.GB * task.attempt, 'memory' ) }
     time = { check_max( 96.h * task.attempt, 'time' ) }
   }
   withName:'multiqc|get_software_versions' {
