Add skip qc test

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
   bai = false
 
   skip_trimming = false
+  skip_fastqc = false
 
   csv = false
   csv_has_is_aligned = false
@@ -156,6 +157,7 @@ profiles {
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_make_diamond_db { includeConfig 'conf/test_make_diamond_db.config' }
   test_noncoding { includeConfig 'conf/test_noncoding.config' }
+  test_skip_qc { includeConfig 'conf/test_skip_qc.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
   test_sambamba { includeConfig 'conf/test_sambamba.config' }
   test_sencha { includeConfig 'conf/test_sencha.config'}
