Add test_skip_qc to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         'test_hash2kmer',
         'test_input_is_protein',
         'test_noncoding',
+        'test_skip_qc',
         'test_sourmash_search',
         'test_sencha',
         'test_sencha_sambamba'
