added host-removal test configs

--- a/nextflow.config
+++ b/nextflow.config
@@ -151,6 +151,8 @@ profiles {
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
+  test_host_removal { includeConfig 'conf/test_host_removal.config' }
+  test_host_removal_paired { includeConfig 'conf/test_host_removal_paired.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_csv { includeConfig 'conf/test_csv.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
