--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - bioconda::bedtools=2.29.2
   - bioconda::fastqc=0.11.8
   - bioconda::multiqc=1.8
+  - bioconda::minimap2=2.17
   - conda-forge::r-markdown=1.1
   - conda-forge::r-base=3.6.1
   - bioconda::samtools=1.10
