Add option to skip diamond and sourmash search

--- a/nextflow.config
+++ b/nextflow.config
@@ -52,6 +52,7 @@ params {
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archea", "plasmid", "protozoa", "viral", "vertebrate_mammalian"
   refseq_release = false
+  skip_search = false
 
   // Sourmash options
   sourmash_index = false  // pre-built sequence bloom tree index
