--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         'test_skip_qc',
         'test_sourmash_search',
         'test_sencha',
+        'test_sencha --skip_search',
         'test_sencha_sambamba'
         ]
     steps:
