Add ignoring of pipefail label

--- a/conf/base.config
+++ b/conf/base.config
@@ -56,5 +56,9 @@ process {
   withName:'multiqc|get_software_versions' {
     cache = false
   }
+  withLabel:ignore_pipefail {
+    errorStrategy = { task.exitStatus in [141] ? 'ignore' : task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
+
+  }
 
 }
